<resources>
    <string name="app_name">LinkCraft</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_login">Sign in</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Log in</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_item_list">Items</string>
    <string name="title_item_detail">Item Detail</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="title_activity_experience">ExperienceActivity</string>
    <string name="title_activity_register">RegisterActivity</string>
    <string name="add_your_experience">Add your experience</string>
    <string name="main_activity_text">Lorem ipsum</string>
    <string name="not_registered">Login</string>
    <string name="add_your_experience_code">Add your experience code</string>
    <string name="add_your_experience_url">Add your link here</string>
    <string name="title_activity_browser_experience">BrowserExperienceActivity</string>
    <string name="about_us">Developed in Autumn 2018 with coffee by
        \n
        \n
        Dorin BALAN &lt;balan.dorin1@yahoo.com&gt;\n
        My Anh HOANG LE &lt;hlmya92@gmail.com&gt;\n
        Eric PRATES &lt;itseric@mail.ru&gt;\n
        Nuraly MUKATAYEV &lt;nuraly.mukataev@is.sdu.edu.kz&gt;\n
        Ruizhe HOU &lt;rayzhe0823@gmail.com&gt;\n
        \n
        at T@T Lab\n
        http://tet.inf.elte.hu/rolunk/ \n
        in Eötvös Loránd University\n
        http://elte.hu
    </string>
    <string name="menu_text_about_us">About us</string>
    <string name="menu_text_create_experience">Create Experience</string>
    <string name="menu_text_manage_experiences">Manage experiences</string>
    <string name="menu_text_browse_experiences">Browse experiences</string>
    <string name="menu_text_register">Register</string>
    <string name="menu_text_login">Login</string>
    <string name="menu_text_home">Home</string>
</resources>
