<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/menu_home"
            android:icon="@drawable/ic_home_black_24dp"
            android:title="@string/menu_text_home" />
        <item
            android:id="@+id/menu_login"
            android:icon="@drawable/ic_login"
            android:title="@string/menu_text_login" />
        <item
            android:id="@+id/menu_register"
            android:icon="@drawable/ic_register"
            android:title="@string/menu_text_register" />
        <item
            android:id="@+id/menu_browse"
            android:icon="@drawable/ic_format_list_bulleted_black_24dp"
            android:title="@string/menu_text_browse_experiences" />
        <item
            android:id="@+id/menu_manage"
            android:icon="@drawable/ic_view_list_black_24dp"
            android:title="@string/menu_text_manage_experiences" />
        <item
            android:id="@+id/menu_create"
            android:icon="@drawable/ic_add_black_24dp"
            android:title="@string/menu_text_create_experience" />
        <item
            android:id="@+id/menu_about"
            android:icon="@drawable/ic_info_outline"
            android:title="@string/menu_text_about_us" />
    </group>
</menu>